Fix initial overflow

--- a/src/layout/footer/footer.layout.scss
+++ b/src/layout/footer/footer.layout.scss
@@ -11,6 +11,7 @@
   align-items: center;
   margin: 0 10.5625rem;
   padding-top: 6.25rem;
+  overflow-x: hidden;
   @include m-queries(1300px) {
     margin: 0 6.25rem;
   }
